fix issue whit buy button, overflow = visible

--- a/style.css
+++ b/style.css
@@ -57,3 +57,7 @@
  .v8 {
      height:80vh;
      }
+
+.waves-effect{
+overflow: visible !important;
+}
